# cool_to_warm_image_conversion

./: CMakeLists.txt  README.md  converter.cpp  converter.hpp  defines.hpp  main.cpp  pixel_helper.cpp  pixel_helper.hpp  test_convert.cpp  test_pixel.cpp
